# nsvr

./: .gitignore  CMakeLists.txt  README.md
include/: nsvr.hpp
include/nsvr/: nsvr_base.hpp  nsvr_client.hpp  nsvr_discoverer.hpp  nsvr_packet_handler.hpp  nsvr_peer.hpp  nsvr_player.hpp  nsvr_player_client.hpp  nsvr_player_server.hpp  nsvr_server.hpp
source/: nsvr.cpp
source/nsvr/: nsvr_base.cpp  nsvr_client.cpp  nsvr_discoverer.cpp  nsvr_internal.cpp  nsvr_internal.hpp  nsvr_packet_handler.cpp  nsvr_peer.cpp  nsvr_player.cpp  nsvr_player_client.cpp  nsvr_player_server.cpp  nsvr_server.cpp
tests/: basic.client.cpp  basic.playback.cpp  basic.server.cpp  bgra2rgba.shader  client.peer.cpp  complete.playback.cpp  multicast.peer.cpp  multicast.server.cpp  server.peer.cpp
tools/share/cmake/: FindGstreamer.cmake
